kubernetes/apps/selfhosted/ghostfolio/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ghostfolio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ghostfolio
  egress:
    # Redis
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ghostfolio-redis
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  ingress:
    # n8n
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: n8n
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "3333"
              protocol: TCP
